# mgh-rna-seq

./: .gitignore  README.md  main.ipynb  pyproject.toml  requirements.txt
tool/: mount_e_drive.sh
