[project]
name = "rna-seq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cutadapt>=5.0",
    "htseq>=2.0.9",
    "pysam>=0.23.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
